# DbCoreLib

./: CMakeLists.txt  DbCoreLib.pro  README.md  dbcorelib_global.h  fifostream.cpp  fifostream.h  fixedsizematrix.h  gzipdevice.cpp  gzipdevice.h  randomdevice.h  tst_fixedsizematrix.cpp  waverecorder.cpp  waverecorder.h
utils/: datastreamutils.h  fileutils.cpp  fileutils.h  jsonutils.cpp  jsonutils.h  timeutils.cpp  timeutils.h
